@@ -397,11 +397,11 @@ public class ProtoCommon {
    * @return md5 string
    */
   public static String md5(byte[] source) throws NoSuchAlgorithmException {
-    char hexDigits[] = {'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'};
+    char[] hexDigits = {'0', '1', '2', '3', '4', '5', '6', '7', '8', '9', 'a', 'b', 'c', 'd', 'e', 'f'};
     java.security.MessageDigest md = java.security.MessageDigest.getInstance("MD5");
     md.update(source);
-    byte tmp[] = md.digest();
-    char str[] = new char[32];
+    byte[] tmp = md.digest();
+    char[] str = new char[32];
     int k = 0;
     for (int i = 0; i < 16; i++) {
       str[k++] = hexDigits[tmp[i] >>> 4 & 0xf];
@@ -422,7 +422,7 @@ public class ProtoCommon {
   public static String getToken(String remote_filename, int ts, String secret_key) throws UnsupportedEncodingException, NoSuchAlgorithmException, MyException {
     byte[] bsFilename = remote_filename.getBytes(ClientGlobal.g_charset);
     byte[] bsKey = secret_key.getBytes(ClientGlobal.g_charset);
-    byte[] bsTimestamp = (new Integer(ts)).toString().getBytes(ClientGlobal.g_charset);
+    byte[] bsTimestamp = Integer.valueOf(ts).toString().getBytes(ClientGlobal.g_charset);
 
     byte[] buff = new byte[bsFilename.length + bsKey.length + bsTimestamp.length];
     System.arraycopy(bsFilename, 0, buff, 0, bsFilename.length);
